# llm-osd

./: AGENT.md  Cargo.toml  README.md  actions.md
docs/: LOG.md  PROMPT.md  SUGGESTIONS.md  actionplan.schema.json  error_codes.md  implementation_plan.md  task.md  usage.md
docs/implementation/: IMPLEMENTATION_2025-12-26T21-28-33-05-00.md  IMPLEMENTATION_2025-12-27T21-28-33-05-00.md
docs/internal/: ERRORS.md  SUGGESTIONS.md
docs/summary/: SUMMARY_2025-12-27T21-26-33-05-00.md
docs/task/: TASK_2025-12-27T21-26-33-05-00.md  TASK_2025-12-27T21-27-33-05-00.md
llm-os-common/: Cargo.toml
llm-os-common/src/: lib.rs
llm-osd/: Cargo.toml
llm-osd/src/: audit.rs  main.rs  policy.rs  server.rs
llm-osd/src/actions/: exec.rs  files.rs  mod.rs
llmsh/: Cargo.toml
llmsh/src/: lib.rs  main.rs
