[package]
name = "llm-osd"
version = "0.1.0"
edition = "2021"

[dependencies]
llm-os-common = { path = "../llm-os-common" }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
base64 = "0.22"

[dev-dependencies]
tempfile = "3.10"
